--- a/public/404.html
+++ b/public/404.html
@@ -60,6 +60,9 @@
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
+      <!-- Go Back Button -->
+      <button class="btn btn-secondary" onclick="window.history.back();">Go Back</button>
+      <p></p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
